fix the device name alignment

--- a/src/client/flogo/flow/flow.component.less
+++ b/src/client/flogo/flow/flow.component.less
@@ -88,7 +88,7 @@
 .flogo-profile__device-type {
   margin-right: 8px;
   flex-shrink: 0;
-  height: 20px;
+  height: 28px;
 }
 
 .header-content {
